# ansiparser

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
ansi_to_html/: __init__.py  api.py  converter.py  parser.py  re_pattern.py  screen_parser.py  sequence_parser.py  sequence_utils.py  structures.py
ansiparser/: __init__.py  api.py  converter.py  re_pattern.py  screen_parser.py  sequence_parser.py  sequence_utils.py  structures.py  utils.py
css/: campbell.css  sgr_attributes.css  vga.css
docs/: conf.py  getting_started.md  index.rst  install.md
docs/reference/: index.md  main_interface.md  screen_parser.md
tests/: test_api.py  test_converter.py  test_example.py  test_re_pattern.py  test_screen_parser.py  test_sequence_parser.py  test_sequence_utils.py  test_structures.py
tools/html_template/: ansiparser_html_template.html  vga.css
